--- a/TEMPLATES - HTML/template.html
+++ b/TEMPLATES - HTML/template.html
@@ -16,9 +16,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/cadastrar">Cadastrar</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/catalogoadmin">Cadastrar Admin</a>
+        </li>
         
       </ul>
-      <div class="container text-center"">
+      <div class="container text-center">
         {% block catalogo %} {% endblock %}
       </div>
 
@@ -29,5 +32,10 @@
       <div class="container-fluid">
         {% block home %} {% endblock %}
       </div>
+
+      <div class="container text-center"">
+        {% block catalogo_editar %} {% endblock %}
+      </div>
+
 </body>
 </html>
